Fixed some encoding problems in ArticleContent